# eco-track-be

./: .env.sample  .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: main.yml
project/: manage.py
project/apps/core/: apps.py
project/apps/core/templatetags/: i18n_switcher.py
project/apps/users/: admin.py  apps.py  forms.py  models.py  tests.py
project/apps/users/migrations/: 0001_initial.py
project/config/: decorators.py  settings.py  urls.py
project/config/static/admin/css/: admin.css  admin.css.map  admin.scss
project/docs/api/: schema.yml
project/locale/de/LC_MESSAGES/: django.mo  django.po
project/scripts/: clear_db.sh  collectstatic.sh  compile_messages.sh  makemessages.sh  migrate.sh  path_pylint.sh  pylint.sh  run_spectacular.sh  run_tests.sh  start.sh
project/templates/admin/: base.html  base_site.html
